added width specification to the profile picture. set to 200

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         </header>
         <main>
             <h1>Lokiel Reed | WDD 130</h1>
-            <img src="images/profile.png" alt="profile picture">
+            <img src="images/profile.png" alt="profile picture" width="200">
             <p>Hello! My name is Lokiel Reed and I am currently a student at BYUI studying Computer Science. This is my first semester here and I am getting married next year!</p>
         </main>
         <footer>
