--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
     <head>
+        <link rel="stylesheet" href="styles/styles.css">
         <meta charset="utf-8">
         <meta name="veiwport" content="width=device-width,inital-scale=1.0">
         <title>Lokiel Reed | WDD 130</title>
