added work from week 2

--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
         <meta charset="utf-8">
         <meta name="veiwport" content="width=device-width,inital-scale=1.0">
         <title>Lokiel Reed | WDD 130</title>
+        <meta name="description" content="The course homepage for Lokiel Reed's WDD130 coursework st BYUI">
+        <meta name="author" content="Lokiel Reed">
     </head>
     <body>
         <header>
             <nav>
                 <a href="#">Home</a>
+                <a href="week2/">Week 2</a>
                 <a href="wwr/">Rafting Website</a>
             </nav>
         </header>
@@ -18,6 +21,11 @@
             <img src="images/profile.png" alt="profile picture" width="200">
             <p>Hello! My name is Lokiel Reed and I am currently a student at BYUI studying Computer Science. This is my first semester here and I am getting married next year!</p>
         </main>
+        <aside>
+            <h2>United States of America</h2>
+            <img src="images/americaneagle.jpg" alt="An American Bald Eagle">
+            <p>Located on the northern hemisphere of the american continent. A relatively new deomocratic republic nation</p>
+        </aside>
         <footer>
             <p>©️2024 Lokiel Reed Rexburg, Idaho</p>
         </footer>
