added temple list to index.html

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             <nav>
                 <a href="#">Home</a>
                 <a href="week2/">Week 2</a>
+                <a href="week3/">Week 3</a>
                 <a href="wwr/">Rafting Website</a>
             </nav>
         </header>
@@ -20,6 +21,11 @@
             <h1>Lokiel Reed | WDD 130</h1>
             <img src="images/profile.webp" alt="profile picture" width="200">
             <p>Hello! My name is Lokiel Reed and I am currently a student at BYUI studying Computer Science. This is my first semester here and I am getting married next year!</p>
+            <ul>
+                <p><a href="https://www.churchofjesuschrist.org/temples/details/boise-idaho-temple?lang=eng" target="_blank">Boise Idaho Temple</a></p>
+                <p><a href="https://www.churchofjesuschrist.org/temples/details/meridian-idaho-temple?lang=eng" target="_blank">Meridian Idaho Temple</a></p>
+                <p><a href="https://www.churchofjesuschrist.org/temples/details/mexico-city-mexico-temple?lang=eng" target="_blank">Mexico City, Mexico Temple</a></p>
+            </ul>
         </main>
         <aside>
             <h2>United States of America</h2>
@@ -30,4 +36,5 @@
             <p>©️2024 Lokiel Reed Rexburg, Idaho</p>
         </footer>
     </body>
+    <!--Last modified 11-26-24 3:04pm-->
 </html>
